tests/ui/nll/user-annotations/dump-fn-method.stderr
error: user args: UserArgs { args: [&'static u32], user_self_ty: None }
  --> $DIR/dump-fn-method.rs:28:13
   |
LL |     let x = foo::<&'static u32>;
   |             ^^^^^^^^^^^^^^^^^^^

error: user args: UserArgs { args: [^c_0, u32, ^c_1], user_self_ty: None }
  --> $DIR/dump-fn-method.rs:34:13
   |
LL |     let x = <_ as Bazoom<u32>>::method::<_>;
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: user args: UserArgs { args: [u8, &'static u16, u32], user_self_ty: None }
  --> $DIR/dump-fn-method.rs:43:13
   |
LL |     let x = <u8 as Bazoom<&'static u16>>::method::<u32>;
   |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: user args: UserArgs { args: [^c_0, ^c_1, u32], user_self_ty: None }
  --> $DIR/dump-fn-method.rs:51:5
   |
LL |     y.method::<u32>(44, 66);
   |     ^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

